[workspace]
members = ["crates/artifacts/*", "crates/core", "crates/project"]
resolver = "2"

[workspace.package]
authors = ["Foundry Maintainers"]
version = "0.7.0"
rust-version = "1.65"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/foundry-rs/compilers"
homepage = "https://github.com/foundry-rs/compilers"
documentation = "https://docs.rs/foundry-compilers"
description = "Utilities for working with solidity compilers, namely solc"
keywords = ["foundry", "solidity", "solc", "ethereum", "ethers"]
edition = "2021"
exclude = [".github/", "scripts/", "test-data/"]

[workspace.dependencies]
foundry-compilers-artifacts-solc = { path = "crates/artifacts/solc", version = "0.7.0" }
foundry-compilers-artifacts-vyper = { path = "crates/artifacts/vyper", version = "0.7.0" }
foundry-compilers-artifacts = { path = "crates/artifacts/artifacts", version = "0.7.0" }
foundry-compilers-core = { path = "crates/core", version = "0.7.0" }
serde = { version = "1", features = ["derive", "rc"] }
semver = { version = "1.0", features = ["serde"] }
serde_json = "1.0"
alloy-primitives = { version = "0.7", features = ["serde", "rand"] }
alloy-json-abi = { version = "0.7", features = ["serde_json"] }
tracing = "0.1"
rayon = "1.8"
thiserror = "1"
regex = "1.10"
path-slash = "0.2"
md-5 = "0.10"
yansi = "1.0.1"
once_cell = "1.19"
svm = { package = "svm-rs", version = "0.5", default-features = false }
solang-parser = { version = "=0.3.3", default-features = false }
similar-asserts = "1"
tempfile = "3.9"

# async
futures-util = "0.3"
tokio = { version = "1.35", features = ["rt-multi-thread"] }
