[workspace]
members = ["crates/artifacts/*", "crates/core", "crates/compilers"]
resolver = "2"

[workspace.package]
authors = ["Foundry Maintainers"]
version = "0.14.0"
rust-version = "1.83"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/foundry-rs/compilers"
homepage = "https://github.com/foundry-rs/compilers"
documentation = "https://docs.rs/foundry-compilers"
description = "Utilities for working with EVM language compilers"
keywords = ["foundry", "solidity", "solc", "ethereum", "ethers"]
edition = "2021"
exclude = [".github/", "scripts/", "test-data/"]

[workspace.lints.clippy]
dbg-macro = "warn"
manual-string-new = "warn"
uninlined-format-args = "warn"
use-self = "warn"
redundant-clone = "warn"

result-large-err = "allow"
large-enum-variant = "allow"

[workspace.lints.rust]
rust-2018-idioms = "warn"
# unreachable-pub = "warn"
unused-must-use = "warn"
redundant-lifetimes = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.dependencies]
foundry-compilers = { path = "crates/compilers", version = "0.14.0" }
foundry-compilers-artifacts = { path = "crates/artifacts/artifacts", version = "0.14.0" }
foundry-compilers-artifacts-solc = { path = "crates/artifacts/solc", version = "0.14.0" }
foundry-compilers-artifacts-vyper = { path = "crates/artifacts/vyper", version = "0.14.0" }
foundry-compilers-artifacts-resolc = { path = "crates/artifacts/resolc", version = "0.14.0" }
foundry-compilers-core = { path = "crates/core", version = "0.14.0" }
rvm = { package = "rvm-rs", version = "0.0.3", default-features = false }
revive-solc-json-interface = { version = "0.1", default-features = false }

alloy-json-abi = { version = "0.8", features = ["serde_json"] }
alloy-primitives = { version = "0.8", features = ["serde", "rand"] }
cfg-if = "1.0"
dunce = "1.0"
md-5 = "0.10"
memmap2 = "0.9"
path-slash = "0.2"
rayon = "1.8"
regex = "1.10"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1.0"
similar-asserts = "1"
solar-parse = { version = "=0.1.2", default-features = false }
solar-sema = { version = "=0.1.2", default-features = false }
svm = { package = "svm-rs", version = "0.5", default-features = false }
tempfile = "3.9"
thiserror = "2"
tracing = "0.1"
walkdir = "2.5"
yansi = "1.0"

# async
futures-util = "0.3"
tokio = { version = "1.35", features = ["rt-multi-thread"] }

snapbox = "0.6.9"
