[workspace]
members = ["crates/artifacts/*", "crates/core", "crates/compilers"]
resolver = "2"

[workspace.package]
authors = ["Foundry Maintainers"]
version = "0.19.10"
rust-version = "1.88"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/foundry-rs/compilers"
homepage = "https://github.com/foundry-rs/compilers"
documentation = "https://docs.rs/foundry-compilers"
description = "Utilities for working with EVM language compilers"
keywords = ["foundry", "solidity", "solc", "ethereum", "ethers"]
edition = "2021"
exclude = [".github/", "scripts/", "test-data/"]

[workspace.lints.clippy]
dbg-macro = "warn"
manual-string-new = "warn"
uninlined-format-args = "warn"
use-self = "warn"
redundant-clone = "warn"

result-large-err = "allow"
large-enum-variant = "allow"

[workspace.lints.rust]
rust-2018-idioms = "warn"
# unreachable-pub = "warn"
unused-must-use = "warn"
redundant-lifetimes = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.dependencies]
foundry-compilers = { path = "crates/compilers", version = "0.19.10" }
foundry-compilers-artifacts = { path = "crates/artifacts/artifacts", version = "0.19.10" }
foundry-compilers-artifacts-solc = { path = "crates/artifacts/solc", version = "0.19.10" }
foundry-compilers-artifacts-vyper = { path = "crates/artifacts/vyper", version = "0.19.10" }
foundry-compilers-core = { path = "crates/core", version = "0.19.10" }

alloy-json-abi = { version = "1.3", features = ["serde_json"] }
alloy-primitives = { version = "1.3", features = ["serde", "rand"] }
cfg-if = "1.0"
dunce = "1.0"
memchr = "2.7"
memmap2 = "0.9"
path-slash = "0.2"
rayon = "1.11"
regex = "1.11"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1.0"
similar-asserts = "1"
solar = { package = "solar-compiler", version = "=0.1.8", default-features = false }
svm = { package = "svm-rs", version = "0.5", default-features = false }
tempfile = "3.20"
thiserror = "2"
tracing = "0.1"
walkdir = "2.5"
yansi = "1.0"

# async
futures-util = "0.3"
tokio = { version = "1.47", features = ["rt-multi-thread"] }

snapbox = "0.6.21"

[patch.crates-io]
# solar = { package = "solar-compiler", git = "https://github.com/paradigmxyz/solar", branch = "main" }
