[package]
name = "foundry-compilers"
description = "Compiler abstraction and Foundry project implementation"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
foundry-compilers-artifacts = { workspace = true, features = [
    "checksum",
    "walkdir",
    "rayon",
] }
foundry-compilers-core = { workspace = true, features = ["regex"] }
serde.workspace = true
semver.workspace = true
alloy-primitives.workspace = true
serde_json.workspace = true
tracing.workspace = true
alloy-json-abi.workspace = true
rayon.workspace = true
md-5.workspace = true
thiserror.workspace = true
path-slash.workspace = true
yansi.workspace = true
solar-parse.workspace = true
solar-sema.workspace = true
futures-util = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

auto_impl = "1"
winnow = "0.7"
dyn-clone = "1"
derive_more = { version = "1", features = ["debug"] }
home = "0.5"
dirs = "6.0"
itertools = ">=0.13, <=0.14"

# project-util
tempfile = { version = "3.9", optional = true }
fs_extra = { version = "1.3", optional = true }
rand = { version = "0.8", optional = true }

# svm
svm = { workspace = true, optional = true }
svm-builds = { package = "svm-rs-builds", version = "0.5", default-features = false, optional = true }
sha2 = { version = "0.10", default-features = false, optional = true }


# rvm
rvm = { workspace = true, default-features = false }


[dev-dependencies]
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
] }
similar-asserts.workspace = true
fd-lock = "4.0.0"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
reqwest = "0.12"
tempfile = "3.18"
snapbox.workspace = true
foundry-compilers-core = { workspace = true, features = ["test-utils"] }
rstest = "0.24.0"
flate2 = "1.1.0"
tar = "0.4.44"
zip = "2.2.3"

[features]
default = ["rustls"]
test-utils = []

full = ["async", "svm-solc"]

# Adds extra `async` methods using `tokio` to some types.
async = [
    "dep:futures-util",
    "dep:tokio",
    "tokio/fs",
    "tokio/process",
    "tokio/io-util",
    "foundry-compilers-artifacts/async",
    "foundry-compilers-core/async",
]
# Enables `svm` to auto-detect and manage `solc` builds.
svm-solc = [
    "dep:svm",
    "dep:svm-builds",
    "dep:sha2",
    "dep:tokio",
    "foundry-compilers-core/svm-solc",
]
# Utilities for creating and testing project workspaces.
project-util = [
    "dep:tempfile",
    "dep:fs_extra",
    "dep:rand",
    "svm-solc",
    "foundry-compilers-core/project-util",
]

rustls = ["svm?/rustls"]
openssl = ["svm?/openssl"]

[[test]]
name = "project"
path = "tests/project.rs"
required-features = ["full", "project-util", "test-utils"]

[[test]]
name = "mocked"
path = "tests/mocked.rs"
required-features = ["full", "project-util"]
