[package]
name = "foundry-compilers-core"
description = "Core utilities for foundry-compilers crates"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
path-slash.workspace = true
alloy-primitives.workspace = true
once_cell.workspace = true
svm = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

walkdir = "2.4"
dunce = "1.0"
memmap2 = "0.9"
cfg-if = "1.0.0"

tempfile = { workspace = true, optional = true }
fs_extra = { version = "1.3", optional = true }

[dev-dependencies]
solang-parser.workspace = true
tempfile.workspace = true

[features]
project-util = ["dep:tempfile", "dep:fs_extra"]
svm-solc = ["dep:svm", "dep:tokio"]
async = ["dep:tokio"]
test-utils = ["dep:tempfile"]
