[package]
name = "foundry-compilers-core"
description = "Core utilities for foundry-compilers crates"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
alloy-primitives.workspace = true
cfg-if.workspace = true
dunce.workspace = true
path-slash.workspace = true
regex.workspace = true
semver.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
walkdir.workspace = true

svm = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

tempfile = { workspace = true, optional = true }
fs_extra = { version = "1.3", optional = true }

[dev-dependencies]
tempfile.workspace = true

[features]
project-util = ["dep:tempfile", "dep:fs_extra"]
svm-solc = ["dep:svm", "dep:tokio"]
async = ["dep:tokio"]
test-utils = ["dep:tempfile"]
