[package]
name = "foundry-compilers-core"
description = "Core utilities for foundry-compilers crates"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
alloy-primitives.workspace = true
cfg-if.workspace = true
dunce.workspace = true
semver.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true

# regex
regex = { workspace = true, optional = true }

# walkdir
walkdir = { workspace = true, optional = true }

# svm-solc
svm = { workspace = true, optional = true }
# async
tokio = { workspace = true, optional = true }

# project-util
tempfile = { workspace = true, optional = true }
fs_extra = { version = "1.3", optional = true }

[target.'cfg(windows)'.dependencies]
path-slash.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
async = ["dep:tokio"]
project-util = ["dep:tempfile", "dep:fs_extra"]
regex = ["dep:regex"]
svm-solc = ["dep:svm", "dep:tokio"]
walkdir = ["dep:walkdir"]

test-utils = ["dep:tempfile"]
