[package]
name = "foundry-compilers-artifacts"
description = "Rust bindings for compilers JSON artifacts"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
foundry-compilers-artifacts-solc.workspace = true
foundry-compilers-artifacts-vyper.workspace = true
foundry-compilers-artifacts-resolc.workspace = true

[features]
async = ["foundry-compilers-artifacts-solc/async"]
checksum = ["foundry-compilers-artifacts-solc/checksum"]
walkdir = ["foundry-compilers-artifacts-solc/walkdir"]
rayon = ["foundry-compilers-artifacts-solc/rayon"]
