[package]
name = "foundry-compilers-artifacts-solc"
description = "Rust bindings for Solc JSON artifacts"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
foundry-compilers-core.workspace = true

alloy-json-abi.workspace = true
alloy-primitives.workspace = true
futures-util = { workspace = true, optional = true }
md-5.workspace = true
rayon.workspace = true
semver.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, optional = true }
tracing.workspace = true
walkdir.workspace = true
yansi.workspace = true

[target.'cfg(windows)'.dependencies]
path-slash.workspace = true

[dev-dependencies]
serde_path_to_error = "0.1"
similar-asserts.workspace = true
foundry-compilers-core = { workspace = true, features = ["test-utils"] }

[features]
async = ["dep:tokio", "futures-util", "tokio/fs"]
