[package]
name = "foundry-compilers-artifacts-vyper"
description = "Rust bindings for Vyper JSON artifacts"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
foundry-compilers-artifacts-solc.workspace = true

serde.workspace = true
alloy-primitives.workspace = true
alloy-json-abi.workspace = true

[target.'cfg(windows)'.dependencies]
path-slash.workspace = true

[dev-dependencies]
serde_path_to_error = "0.1"
similar-asserts.workspace = true
foundry-compilers-core = { workspace = true, features = ["test-utils"] }
serde_json.workspace = true
